Update tests to compile/run with --enable-preview