@@ -31,9 +31,10 @@
  * @modules java.compiler
  *          java.instrument
  *          jdk.jartool/sun.tools.jar
+ * @compile --enable-preview -source ${jdk.version} RedefineRunningMethodsWithBacktrace.java
  * @run main RedefineClassHelper
- * @run main/othervm -javaagent:redefineagent.jar RedefineRunningMethodsWithBacktrace platform
- * @run main/othervm -javaagent:redefineagent.jar RedefineRunningMethodsWithBacktrace virtual
+ * @run main/othervm --enable-preview -javaagent:redefineagent.jar RedefineRunningMethodsWithBacktrace platform
+ * @run main/othervm --enable-preview -javaagent:redefineagent.jar RedefineRunningMethodsWithBacktrace virtual
  */
 
 import java.util.concurrent.ThreadFactory;
