@@ -38,7 +38,8 @@ import java.io.PrintStream;
  *     Ported from JVMDI.
  *
  * @library /test/lib
- * @run main/othervm/native -agentlib:fieldacc02 fieldacc02
+ * @compile --enable-preview -source ${jdk.version} fieldacc02.java
+ * @run main/othervm/native --enable-preview -agentlib:fieldacc02 fieldacc02
  */
 
 
