@@ -38,7 +38,8 @@
  *     Ported from JVMDI.
  *
  * @library /test/lib
- * @run main/othervm/native -agentlib:getstacktr06 getstacktr06
+ * @compile --enable-preview -source ${jdk.version} getstacktr06.java
+ * @run main/othervm/native --enable-preview -agentlib:getstacktr06 getstacktr06
  */
 
 import java.io.PrintStream;
