@@ -45,7 +45,8 @@
  *     Ported from JVMDI.
  *
  * @library /test/lib
- * @run main/othervm/native -agentlib:getstacktr08 getstacktr08
+ * @compile --enable-preview -source ${jdk.version} getstacktr08.java
+ * @run main/othervm/native --enable-preview -agentlib:getstacktr08 getstacktr08
  */
 
 
