@@ -24,8 +24,8 @@
 /**
  * @test
  * @summary Verifies that MethodExit events are delivered on both carrier and virtual threads.
- * @compile MethodExitTest.java
- * @run main/othervm/native -agentlib:MethodExitTest -Djdk.defaultScheduler.parallelism=2 MethodExitTest 150
+ * @compile --enable-preview -source ${jdk.version} MethodExitTest.java
+ * @run main/othervm/native --enable-preview -agentlib:MethodExitTest -Djdk.defaultScheduler.parallelism=2 MethodExitTest 150
  */
 
 import java.util.concurrent.*;
