@@ -24,8 +24,9 @@
 /**
  * @test
  * @summary Basic test of debugging option to trace pinned threads
- * @run main/othervm -Djdk.tracePinnedThreads=full TracePinnedThreads
- * @run main/othervm -Djdk.tracePinnedThreads=short TracePinnedThreads
+ * @compile --enable-preview -source ${jdk.version} TracePinnedThreads.java
+ * @run main/othervm --enable-preview -Djdk.tracePinnedThreads=full TracePinnedThreads
+ * @run main/othervm --enable-preview -Djdk.tracePinnedThreads=short TracePinnedThreads
  */
 
 import java.io.ByteArrayOutputStream;
