@@ -26,7 +26,9 @@
  * @summary Stress test the HTTP protocol handler and HTTP server
  * @requires vm.debug != true
  * @modules java.base/java.util.concurrent:open
+ * @compile --enable-preview -source ${jdk.version} HttpALot.java
  * @run main/othervm/timeout=600
+ *     --enable-preview
  *     -Dsun.net.client.defaultConnectTimeout=5000
  *     -Dsun.net.client.defaultReadTimeout=5000
  *     HttpALot
