@@ -19,7 +19,8 @@ import jdk.test.lib.jfr.Events;
  * @requires vm.hasJFR
  * @library /test/lib /test/jdk
  * @modules jdk.jfr/jdk.jfr.internal
- * @run main/othervm jdk.jfr.threading.TestNestedVirtualThreads
+ * @compile --enable-preview -source ${jdk.version} TestNestedVirtualThreads.java
+ * @run main/othervm --enable-preview jdk.jfr.threading.TestNestedVirtualThreads
  */
 public class TestNestedVirtualThreads {
     @Name("test.Nested")
